--- a/BlazorAI/Pages/Password.razor
+++ b/BlazorAI/Pages/Password.razor
@@ -45,22 +45,7 @@
 
     <OutputSection>
 
-        <div style="display:flex; height:320px;"> @*TODO: Remove hardcoded value and get vertical fill to work*@
-             <Card>
-                 <div class="password-bg">
-                    <div class="password-grid" style="grid-template-columns: repeat(@rowLength, 1fr);" >
-                        <TemplatedList Items="@solution">
-                            <div>
-                            <svg viewBox="0 0 40 60" class="password-container" >
-                                <rect x="0px" y="0px" class="password-cell" />
-                                <text x="50%" y="50%" class="password-text" dominant-baseline="middle" text-anchor="middle">@context</text>
-                            </svg>
-                            </div>
-                        </TemplatedList>
-                    </div>
-                </div>
-            </Card>
-        </div>
+        <PasswordGrid Solution="@solution" RowLength="@rowLength" />
 
     </OutputSection>
 
