--- a/BlazorAI/Shared/MainFooter.razor
+++ b/BlazorAI/Shared/MainFooter.razor
@@ -12,8 +12,7 @@
             <img src="/images/footer/blazor-logo-small.png" alt="Blazor" class="d-lg-none d-inline" style="height:40px; opacity:0.7;" />
         </a>
 
-        @*TODO: Fix link*@
-        <a href="https://github.com/" style="margin:0 20px;" >
+        <a href="https://github.com/lhalsey/BlazorAI" style="margin:0 20px;" >
             <img src="/images/footer/github-logo.png" alt="GitHub" class="d-lg-inline d-none" style="height:36px; opacity:0.7;" />
             <img src="/images/footer/github-logo-small.png" alt="GitHub" class="d-lg-none d-inline" style="height:36px; opacity:0.7;" />
         </a>
