Minor cosmetic enhancement to chess board

--- a/BlazorAI/ProblemComponents/ChessSquare.razor
+++ b/BlazorAI/ProblemComponents/ChessSquare.razor
@@ -3,17 +3,32 @@
 
     <svg style="width:100%; height:100%; " viewBox="-50 -50 600 600">
 
+          <linearGradient id="white-shadow" gradientUnits="userSpaceOnUse" 
+           x1="0%" y1="0%" x2="100%" y2="0%" gradientTransform="rotate(45)">
+            <stop offset="0%" stop-color="#cccccc" stop-opacity="1"/>
+            <stop offset="50%" stop-color="#cccccc" stop-opacity="0"/>
+          </linearGradient>
+
+          <linearGradient id="black-shadow" gradientUnits="userSpaceOnUse" 
+           x1="0%" y1="0%" x2="100%" y2="0%" gradientTransform="rotate(45)">
+            <stop offset="0%" stop-color="#999999" stop-opacity="1"/>
+            <stop offset="50%" stop-color="#999999" stop-opacity="0"/>
+          </linearGradient>
+
         <rect x="-50" y="-50" width="600" height="600" fill="@FillColour" />
 
         @if (IsInvalid)
         {
             <rect x="-50" y="-50" width="600" height="600" fill="#ad91c4" opacity="0.7"/>
+            
         }
 
         @if (HasQueen)
         {
 			<image width="500" height="500" href="/images/problems/eightqueens/chess-queen.svg"/>
         }
+
+        <polygon points="-40,-40 -40,500 500,-40" fill="@ShadowColour" opacity="0.4" />
     </svg>
 
 </div>
