Add Genius Square solver and UI

--- a/BlazorAI/Components/NavPanel.razor
+++ b/BlazorAI/Components/NavPanel.razor
@@ -37,4 +37,12 @@
         </NavLink>    
     </Tooltip>
 
+     <Tooltip Text="Genius Square" Margin="Margin.Is1">
+        <NavLink href="/geniussquare">
+            <Button class="@buttonClasses[4]" >
+                <img src="images/nav/blocks.svg" alt="Blocks" class="nav-button-img"/>
+            </Button>
+        </NavLink>    
+    </Tooltip>
+
 </div>
