--- a/BlazorAI/Pages/Password.razor
+++ b/BlazorAI/Pages/Password.razor
@@ -39,7 +39,9 @@
           of attempts to guess a password before being locked out and you would receive no feedback
           on incorrect guesses. However, it provides a simple example of evolving a solution
           through crossover, mutation and survival of the fittest.</p>
-        <p>You may need to increase the population size to crack password 7 which belongs to Rick Astley!</p>
+        <p>You may need to increase the number of generations to crack
+            <a @onclick="@(() => Update(7))" style="text-decoration:underline; color:#0D658C;" >password 7</a>
+           which belongs to Rick Astley!</p>
 
     </ProblemSection>
 
