--- a/BlazorAI/Pages/TravellingSalesman.razor
+++ b/BlazorAI/Pages/TravellingSalesman.razor
@@ -40,7 +40,9 @@
         <h2>Performance</h2>
         <p>This technique works well on this problem and also on other
         <a href="https://en.wikipedia.org/wiki/NP-hardness">NP-hard</a> problems.</p>
-        <p>See if you can beat 4,000 miles for 35 cities with random seed 100!</p>
+        <p>See if you can beat 4,000 miles for 35 cities with random seed
+            <a @onclick="@(() => Update(35,100))" style="text-decoration:underline; color:#0D658C;">100</a>
+        ...!</p>
 
     </ProblemSection>
 
