Upgrade to .NET 7.0. Upgrade GeneticSharp package. Upgrade Blazorise package and add Blazorise icon to footer.

--- a/BlazorAI/Pages/FiveHouses.razor
+++ b/BlazorAI/Pages/FiveHouses.razor
@@ -47,7 +47,7 @@
             </div>
 
             <div class="rules-grid">
-                <OrderedList Items="@rules" />
+                <BlazorAI.Client.Components.OrderedList Items="@rules" />
             </div>
 
         </Card>
