--- a/BlazorAI/Shared/MainFooter.razor
+++ b/BlazorAI/Shared/MainFooter.razor
@@ -7,6 +7,11 @@
             <img Display src="/images/footer/geneticsharp-logo-small.png" alt="GeneticSharp" class="d-lg-none d-inline" style="height:40px; opacity:0.7;" />
         </a>
 
+         <a href="https://blazorise.com/" style="margin:0 20px;" >
+            <img Display src="/images/footer/blazorise-logo.png" alt="Blazorise" class="d-lg-inline d-none" style="height:40px; opacity:0.7;" />
+            <img Display src="/images/footer/blazorise-logo-small.png" alt="Blazorise" class="d-lg-none d-inline" style="height:40px; opacity:0.7;" />
+        </a>
+
         <a href="https://dotnet.microsoft.com/apps/aspnet/web-apps/blazor" style="margin:0 20px;" >
             <img src="/images/footer/blazor-logo.png" alt="Blazor" class="d-lg-inline d-none" style="height:40px; opacity:0.7;" />
             <img src="/images/footer/blazor-logo-small.png" alt="Blazor" class="d-lg-none d-inline" style="height:40px; opacity:0.7;" />
@@ -20,9 +25,9 @@
 
     <div style="margin:25px auto 0 auto; display:table;">
         <div style="display: flex">
-            <p style="margin-right:10px;">© 2020 Lee Halsey</p>
+            <p style="margin-right:10px;">© 2023 Lee Halsey</p>
             <p style="margin-right:10px;">|</p>
-            <p>v1.0.2</p>
+            <p>v2.0.0</p>
         </div>
     </div>
 </footer>
