--- a/BlazorAI/Components/FitnessChart.razor
+++ b/BlazorAI/Components/FitnessChart.razor
@@ -1,3 +1,3 @@
 ﻿@inherits FitnessChartBase
 
-<LineChart @ref="lineChart" TItem="Point" />
+<LineChart @ref="lineChart" TItem="Point" Options="@lineChartOptions" />
