Upgrade remaining packages. Code clean up.

--- a/BlazorAI/Components/ErrorSnackbar.razor
+++ b/BlazorAI/Components/ErrorSnackbar.razor
@@ -1,5 +1,5 @@
 ﻿
-<Snackbar Visible="@showError" Color="SnackbarColor.Danger" Interval="20000" Multiline="true">
+<Snackbar Visible="@ShowError" Color="SnackbarColor.Danger" Interval="20000" Multiline="true">
   <SnackbarBody>
     @Error
   </SnackbarBody>
