--- a/BlazorAI/Components/SolverControl.razor
+++ b/BlazorAI/Components/SolverControl.razor
@@ -34,35 +34,35 @@
 
         </Column>
 
-        <Column class="@selectorClass" ColumnSize="ColumnSize.Is6.OnMobile.Is6.OnTablet.Is4.OnDesktop.Is2.OnWidescreen" >
+        <Column class="@SelectorClass" ColumnSize="ColumnSize.Is6.OnMobile.Is6.OnTablet.Is4.OnDesktop.Is2.OnWidescreen" >
             <SelectControl
                 Label="Generations"
                 Choices="@generationChoices"
                 @bind-Value="@SolverParameters.Generations" />
         </Column>
 
-        <Column class="@selectorClass" ColumnSize="ColumnSize.Is6.OnMobile.Is6.OnTablet.Is4.OnDesktop.Is2.OnWidescreen" >
+        <Column class="@SelectorClass" ColumnSize="ColumnSize.Is6.OnMobile.Is6.OnTablet.Is4.OnDesktop.Is2.OnWidescreen" >
             <SelectControl
                 Label="Population"
                 Choices="@populationChoices"
                 @bind-Value="@SolverParameters.Population" />
         </Column>
 
-        <Column class="@selectorClass" ColumnSize="ColumnSize.Is6.OnMobile.Is6.OnTablet.Is4.OnDesktop.Is2.OnWidescreen" >
+        <Column class="@SelectorClass" ColumnSize="ColumnSize.Is6.OnMobile.Is6.OnTablet.Is4.OnDesktop.Is2.OnWidescreen" >
             <SelectControl
                 Label="Selection"
                 Choices="@selectionChoices"
                 @bind-Value="@SolverParameters.Selection" />
         </Column>
 
-        <Column class="@selectorClass" ColumnSize="ColumnSize.Is6.OnMobile.Is6.OnTablet.Is4.OnDesktop.Is2.OnWidescreen" >
+        <Column class="@SelectorClass" ColumnSize="ColumnSize.Is6.OnMobile.Is6.OnTablet.Is4.OnDesktop.Is2.OnWidescreen" >
             <SelectControl
                 Label="Crossover %"
                 Choices="@crossoverChoices"
                 @bind-Value="@SolverParameters.CrossoverProbability" />
         </Column>
 
-        <Column class="@selectorClass" ColumnSize="ColumnSize.Is6.OnMobile.Is6.OnTablet.Is4.OnDesktop.Is2.OnWidescreen" >
+        <Column class="@SelectorClass" ColumnSize="ColumnSize.Is6.OnMobile.Is6.OnTablet.Is4.OnDesktop.Is2.OnWidescreen" >
             <SelectControl
                 Label="Mutation %"
                 Choices="@mutationChoices"
